# ml_proj

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
artifacts/deploy/: IrisClassifier.pkl
configs/: README.md
configs/anomaly_detection/: evaluate.yaml  predict.yaml  search.yaml  train.yaml
configs/classification/: evaluate.yaml  predict.yaml  search.yaml  train.yaml
configs/clustering/: evaluate.yaml  predict.yaml  search.yaml
configs/pca_reduction/: evaluate.yaml  predict.yaml  search.yaml  train.yaml
configs/regression/: evaluate.yaml  predict.yaml  search.yaml  train.yaml
configs/timeseries/: predict.yaml  search.yaml  train.yaml
configs/topic_modeling/: evaluate.yaml  predict.yaml  search.yaml  train.yaml
examples/legacy/: README.md
origin_scripts/data_analysis/: causual_inference.py  factor_analysis.py  hypothetis_test.py  multiple_regression.py  tree_model.py
origin_scripts/data_provider/: config_loader.py  data_loader_lgb.py  data_loader_xgb.py  json_loader.py  yaml_loader.py
origin_scripts/feature_engine/: FeatureBinning.py  FeatureBuilding.py  FeatureEncoding.py  FeatureSelection.py  FeatureSplit.py  FeatureStacking.py  FeatureText.py  FeatureTransform.py  NormalityTransform.py  RandomForestImportance.py  SampleImbalance.py  SampleMissing.py
origin_scripts/metric/: __init__.py
outputs/: classification_inference_input.csv  classification_predictions.csv  classification_predictions.report.json  clustering_inference_input.csv  clustering_predictions.csv  clustering_predictions.report.json  regression_inference_input.csv  regression_predictions.csv  regression_predictions.report.json  timeseries_inference_input.csv  timeseries_predictions.csv  timeseries_predictions.report.json
src/mlproj/: cli.py  (+2 more)
(+144 files in other folders)
